<resources>
    <string name="app_name">ProjetoProgramacaoAvancada</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Titulo_Fragmento_Exercicio">Exercício</string>
    <string name="exerc_cio">Exercício</string>
    <string name="dieta">Dieta</string>
    <string name="utilizador">Utilizador</string>
    <string name="alimento">Alimento</string>
    <string name="treino">Treino</string>
    <string name="logotipo">Logotipo</string>
    <string name="tiago">Tiago</string>
    <string name="feminino">Feminino</string>
    <string name="_24">24</string>
    <string name="textview">TextView</string>
    <string name="descri_o_do_treino">Descrição do treino :</string>
    <string name="utilizador_associado_a_este_treino">Utilizador associado a este treino :</string>
    <string name="nome">Nome</string>
    <string name="peso">Peso</string>
</resources>