<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EliminarAlimentoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNomeAlimentoDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tiago" />

        <TextView
            android:id="@+id/textViewQuantidadeDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />

        <TextView
            android:id="@+id/textViewCaloriasDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_24" />

    </LinearLayout>

</FrameLayout>