<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button2"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_ballot_24"
        android:text="@string/treino"
        app:cornerRadius="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonExercise"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_pedal_bike_24"
        android:text="@string/exerc_cio"
        app:cornerRadius="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAliment"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_baseline_ballot_24"
        android:text="@string/dieta"
        app:cornerRadius="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_first"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:text="@string/utilizador"
        app:cornerRadius="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonAliment"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_baseline_fastfood_24"
        android:text="@string/alimento"
        app:cornerRadius="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="241dp"
        android:layout_height="256dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/logotipo"
        android:src="@drawable/logotipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>